versioned_docs/version-8.7/apis-tools/spring-zeebe-sdk/getting-started.md
---
id: getting-started
title: Getting started
description: "Leverage Zeebe APIs (gRPC and REST) in your Spring Boot project."
---

This project allows you to leverage Zeebe APIs ([gRPC](/apis-tools/zeebe-api/grpc.md) and [REST](/apis-tools/camunda-api-rest/camunda-api-rest-overview.md)) in your Spring Boot project. Later on, we’ll expand the Spring Zeebe SDK to deliver a Camunda Spring SDK that provides a unified experience for interacting with all Camunda APIs in Java Spring.

:::info Deprecated Spring Zeebe SDK
Starting with 8.8, the Spring Zeebe SDK will become the new Camunda Spring Boot SDK. The SDK will rely on the new Camunda Java client,
designed to enhance the user experience and introduce new features while maintaining compatibility with existing codebases.

**Note:** Spring Zeebe SDK will be removed in version 8.10. Please migrate to the new Camunda Spring Boot SDK before then.

For more information, visit [announcements](/reference/announcements-release-notes/870/870-announcements.md#spring-zeebe-sdk).
:::

## Version compatibility

| Spring Zeebe SDK version      | Module                                                            | JDK  | Camunda version | Bundled Spring Boot version | Compatible Spring Boot version(s) |
| ----------------------------- | ----------------------------------------------------------------- | ---- | --------------- | --------------------------- | --------------------------------- |
| 8.6.x (< 8.6.14)              |                                                                   | ≥ 17 | 8.6.x           | 3.3.x                       |                                   |
| 8.6.x (>= 8.6.14, < 8.6.30)   |                                                                   | ≥ 17 | 8.6.x           | 3.4.x                       |                                   |
| 8.6.x (>= 8.6.30)             |                                                                   | ≥ 17 | 8.6.x           | 3.4.x                       | 3.5.x                             |
| 8.7.x (< 8.7.17)              | `spring-boot-starter-camunda-sdk`                                 | ≥ 17 | 8.7.x           | 3.4.x                       |                                   |
| 8.7.x (>= 8.7.17, < 8.7.24)   | `spring-boot-starter-camunda-sdk`                                 | ≥ 17 | 8.7.x           | 3.4.x                       | 3.5.x                             |
| 8.7.x (>= 8.7.24)             | `spring-boot-starter-camunda-sdk` / `camunda-spring-boot-3-starter` | ≥ 17 | 8.7.x           | 3.4.x                       | 3.5.x                             |
| 8.7.x (>= 8.7.24)             | `camunda-spring-boot-4-starter`                                   | ≥ 17 | 8.7.x           | 4.0.x                       |                                   |

### Spring Boot 4.0 support

Starting with the Camunda 8.7.24 patch release, a dedicated starter artifact is available that provides Spring Boot 4.0 support:

```xml
<dependency>
    <groupId>io.camunda</groupId>
    <artifactId>camunda-spring-boot-4-starter</artifactId>
    <version>8.7.x</version>
</dependency>
```

You should use this as a drop-in replacement for the default `spring-boot-starter-camunda-sdk` when upgrading to Spring Boot 4.0.

:::note
`camunda-spring-boot-3-starter` is an alias for `spring-boot-starter-camunda-sdk` in the 8.7 release. Use `camunda-spring-boot-3-starter` if you want to stay on Spring Boot 3.5 when upgrading to Camunda 8.8 or newer.
:::

## Add the Spring Zeebe SDK to your project

Add the following Maven dependency to your Spring Boot Starter project, replacing `x` with the latest patch level available:

```xml
<dependency>
    <groupId>io.camunda</groupId>
    <artifactId>spring-boot-starter-camunda-sdk</artifactId>
    <version>8.7.x</version>
</dependency>
```

## Enable the Java Compiler `-parameters`-flag

If you don't want to specify annotation values just as the process variable name on the [variable](configuration.md#using-variable) annotation, the Java compiler flag `-parameters` is required.

If you are using Maven you can enable this with the Compiler plugin:

```xml
<build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <compilerArgs>
            <arg>-parameters</arg>
          </compilerArgs>
        </configuration>
      </plugin>
    </plugins>
  </build>
```

If you are using Gradle:

```xml
tasks.withType(JavaCompile) {
    options.compilerArgs << '-parameters'
}
```

If you are using IntelliJ:

```agsl
Settings > Build, Execution, Deployment > Compiler > Java Compiler
```

## Configuring the Camunda 8 connection

The default properties for setting up all connection details are hidden in modes. Each connection mode has particular defaults to ease configuration.

The mode is set on `camunda.client.mode` and can be `self-managed` or `saas`. Further usage of each mode is explained below.

:::note
Zeebe will now also be configured with a URL (`http://localhost:26500` instead of `localhost:26500` + plaintext connection flag).
:::

### Saas

Connections to Camunda SaaS can be configured by creating the following entries in `src/main/resources/application.yaml`:

```yaml
camunda:
  client:
    mode: saas
    auth:
      client-id: <your client id>
      client-secret: <your client secret>
    cloud:
      cluster-id: <your cluster id>
      region: <your cluster region id>
```

### Self-Managed

If you set up a Self-Managed cluster with Identity, Keycloak is used as the default Identity provider. As long as the port config (from Docker Compose or port-forward with Helm charts) is the default, you must configure the accompanying Spring profile and client credentials:

```yaml
camunda:
  client:
    mode: self-managed
    auth:
      client-id: <your client id>
      client-secret: <your client secret>
      token-url: http://localhost:18080/auth/realms/camunda-platform/protocol/openid-connect/token
```

If you have different endpoints for your applications or want to disable a client, configure the following:

```yaml
camunda:
  client:
    mode: self-managed
    tenant-id: <default>
    auth:
      client-id: <your client id>
      client-secret: <your client secret>
      token-url: http://localhost:18080/auth/realms/camunda-platform/protocol/openid-connect/token
    zeebe:
      enabled: true
      grpc-address: http://localhost:26500
      rest-address: http://localhost:8080
      prefer-rest-over-grpc: false
      audience: zeebe-api
      scope: # optional
```

## Obtain the Zeebe client

You can inject the Zeebe client and work with it to create new workflow instances, for example:

```java
@Autowired
private ZeebeClient client;
```

:::info Deprecated Zeebe Client
Starting with 8.8, the Zeebe Java client will become the new Camunda Java client.

**Note**: The Zeebe Java client will be removed in version 8.10. Please migrate to the new Camunda Java client before then.

For more information, visit [announcements](/reference/announcements-release-notes/870/870-announcements.md#zeebe-java-client).
:::

## Deploy process models

Use the `@Deployment` annotation:

```java
@SpringBootApplication
@Deployment(resources = "classpath:demoProcess.bpmn")
public class MySpringBootApplication {
```

This annotation internally uses [the Spring resource loader](#resources-resourceloader) mechanism. This is powerful, and can also deploy multiple files at once, for example:

```java
@Deployment(resources = {"classpath:demoProcess.bpmn" , "classpath:demoProcess2.bpmn"})
```

Or, define wildcard patterns:

```java
@Deployment(resources = "classpath*:/bpmn/**/*.bpmn")
```

## Implement the job worker

```java
@JobWorker(type = "foo")
public void handleJobFoo(final ActivatedJob job) {
  // do whatever you need to do
}
```

See [the configuration documentation](/apis-tools/spring-zeebe-sdk/configuration.md) for a more in-depth discussion on parameters and configuration options for job workers.

## Writing test cases

To learn more about writing test cases using Zeebe Process Test, see [Spring Zeebe SDK integration](../java-client/zeebe-process-test.md#zeebe-spring-sdk-integration).
